added html links & more tests

--- a/tests/result.html
+++ b/tests/result.html
@@ -14,7 +14,7 @@ A script to help create new python projects
 <h2>Installation</h2>
 <h4>Dependencies</h4>
 <ul>
-	<li>You will need to install [Git](https://git-scm.com/downloads) seperately</li>
+	<li>You will need to install <a href="https://git-scm.com/downloads" target="_blank">Git</a> seperately</li>
 </ul>
 <h4>From Source</h4>
 <ul>
